--- a/JAVA/prototipo-aplicacao/pom.xml
+++ b/JAVA/prototipo-aplicacao/pom.xml
@@ -55,6 +55,22 @@
             <artifactId>oshi-core</artifactId>
             <version>3.13.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>7.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.profesorfalken/jSensors -->
+        <dependency>
+            <groupId>com.profesorfalken</groupId>
+            <artifactId>jSensors</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+
+        
 
 
     </dependencies>
