--- a/JAVA/Prototipo/prototipo-aplicacao/pom.xml
+++ b/JAVA/Prototipo/prototipo-aplicacao/pom.xml
@@ -69,10 +69,12 @@
             <artifactId>jSensors</artifactId>
             <version>2.2.1</version>
         </dependency>
-
-        
-
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
 </project>
